--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label=""
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -16,6 +16,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Daftar"
+            android:label="Daftar Member"/>
+        <activity android:name=".ServicePanggilan" />
+        <activity android:name=".TampilanMap" />
+        <activity android:name=".ListBengkel" />
+        <activity android:name=".verifikasipass"
+            android:label="Masuk"/>
+        <activity android:name=".Daftar1"
+            android:label="Daftar"/>
+        <activity android:name=".ServiceRutin" />
+        <activity android:name=".ServicePanggilan1"></activity>
     </application>
 
 </manifest>
