--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,11 @@
             android:label="Daftar" />
         <activity android:name=".ServiceRutin" />
         <activity android:name=".ServicePanggilan1" />
-        <activity android:name=".bookingservice"
-            android:label="Booking Service"></activity>
+        <activity
+            android:name=".bookingservice"
+            android:label="Booking Service" />
+        <activity android:name=".home"
+            android:label="OMecMart"></activity>
     </application>
 
 </manifest>
