--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lenovo.omecmart">
-    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-
+        android:label=""
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-
-        </activity>
-        <activity
-            android:name=".login"
-            android:label="Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,11 +30,7 @@
             android:label="Daftar" />
         <activity android:name=".ServiceRutin" />
         <activity android:name=".ServicePanggilan1" />
-        <activity
-            android:name=".bookingservice"
-            android:label="Booking Service" />
-        <activity android:name=".home"
-            android:label="OMecMart"></activity>
+        <activity android:name=".home"></activity>
     </application>
 
 </manifest>
